--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 //#必須以VUE_APP為開頭
 //#base api
-VUE_APP_BASE_URL = 'todo-app'
+VUE_APP_BASE_URL = ''
 //#後端API
 VUE_APP_BASE_API = 'http://127.0.0.1:8080/'
