--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.1.3",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2",
